--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-  <title>My sample D3.js App</title>
+  <title>Sowjanya's Visualisation !!</title>
   <script src="d3.min.js"></script>
 </head>
 <body>
-  <h1>Bar Chart using D3.js</h1>
+  <h1>You can do this Sowjanya Raju !!</h1>
   <svg width = 500 height = 800 class=”bar-chart”></svg>  
 
   <script src="main.js"></script>
