--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <body>
   <h1>You can do this Sowjanya Raju !!</h1>
   <svg width = 500 height = 800 class=”bar-chart”></svg>  
+<body>
+    <button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/datavisualisation/';">
+      Next
+    </button>
 
   <script src="main.js"></script>
 </body>
