--- a/Project_1.html
+++ b/Project_1.html
@@ -7,6 +7,9 @@
 <body>
   <h1>You can do it Sowjanya Raju</h1>
   <svg width = 500 height = 800 class=”bar-chart”></svg>  
+    <button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/datavisualisation/';">
+      Back
+    </button>
 
   <script src="main.js"></script>
 </body>
