--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/datavisualisation/';">
       Next
     </button>
+	
+	<button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/datavisualisation/';">
+      Back
+    </button>
 
   <script src="main.js"></script>
 </body>
