--- a/index.html
+++ b/index.html
@@ -1,21 +1,165 @@
-<html>
+<!DOCTYPE html>
+<meta charset="utf-8">
 
-<head>
-  <title>Sowjanya's Visualisation !!</title>
-  <script src="d3.min.js"></script>
-</head>
-<body>
-  <h1>You can do this Sowjanya Raju !!</h1>
-  <svg width = 500 height = 800 class=”bar-chart”></svg>  
-<body>
-    <button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/datavisualisation/';">
-      Next
-    </button>
+<!-- Load d3.js -->
+<script src="https://d3js.org/d3.v4.js"></script>
+
+<!-- Create a div where the graph will take place -->
+<div id="my_dataviz"></div>
+
+<script>
+
+// set the dimensions and margins of the graph
+var margin = {top: 10, right: 30, bottom: 30, left: 40},
+    width = 1000 - margin.left - margin.right,
+    height = 600 - margin.top - margin.bottom;
+
+// append the svg object to the body of the page
+var svg = d3.select("#my_dataviz")
+  .append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform",
+          "translate(" + margin.left + "," + margin.top + ")");
+
+// get the data
+d3.csv("https://raw.githubusercontent.com/sowjanyabhupathiraju/sowjanya.github.io/master/covid-country.csv", function(data) {
+
+  // X axis: scale and draw:
+  var x = d3.scaleLinear()
+      .domain([0, 30])     // can use this instead of 1000 to have the max of data: d3.max(data, function(d) { return +d.price })
+      .range([0, width]);
+  svg.append("g")
+      .attr("transform", "translate(0," + height + ")")
+      .call(d3.axisBottom(x));
+
+svg.append("text")
+    .attr("class", "x label")
+    .attr("text-anchor", "end")
+    .attr("x", width)
+    .attr("y", height+28.5)
+    .text("Mortality %(30 July 2020)");
+
+svg.append("text")
+    .attr("class", "x label")
+    .attr("text-anchor", "center")
+    .attr("x", margin.left-30)
+    .attr("y", margin.top+50)
+    .text("Lower mortality may be due to early stage of infection")
+
+svg.append("text")
+    .attr("class", "x label")
+    .attr("text-anchor", "center")
+	.attr("font-weight", "bold")
+    .attr("x", 300)
+    .attr("y", 30)
+    .text("Mortality Distribution across Countries");
 	
-	<button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/datavisualisation/';">
+rect = svg.append('rect').transition().duration(500).attr('width', 160)
+                .attr('height', 50)
+                .attr('x', 40)
+                .attr('y', 100)
+                .style('fill', 'white')
+                .attr('stroke', 'orange')
+text = svg.append('text').text('Mouseover for details')
+                .attr('x', 50)
+                .attr('y', 125)
+                .attr('fill', 'black')
+
+
+
+
+	
+  // set the parameters for the histogram
+  var histogram = d3.histogram()
+      .value(function(d) { return d.mortality; })   // I need to give the vector of value
+      .domain(x.domain())  // then the domain of the graphic
+      .thresholds(x.ticks(200)); // then the numbers of bins
+
+  // And apply this function to data to get the bins
+  var bins = histogram(data);
+
+  // Y axis: scale and draw:
+  var y = d3.scaleLinear()
+      .range([height, 0]);
+      y.domain([0, d3.max(bins, function(d) { return d.length; })]);   // d3.hist has to be called before the Y axis obviously
+  svg.append("g")
+      .call(d3.axisLeft(y));
+svg.append("text")
+    .attr("class", "y label")
+    .attr("text-anchor", "end")
+    .attr("y", -35)
+    .attr("dy", ".75em")
+    .attr("transform", "rotate(-90)")
+    .text("Number of Countries");
+
+  // Add a tooltip div. Here I define the general feature of the tooltip: stuff that do not depend on the data point.
+  // Its opacity is set to 0: we don't see it by default.
+  var tooltip = d3.select("#my_dataviz")
+    .append("div")
+    .style("opacity", 0)
+    .attr("class", "tooltip")
+    .style("background-color", "black")
+    .style("color", "white")
+    .style("border-radius", "5px")
+    .style("padding", "10px")
+
+  // A function that change this tooltip when the user hover a point.
+  // Its opacity is set to 1: we can now see it. Plus it set the text and position of tooltip depending on the datapoint (d)
+  var showTooltip = function(d) {
+    tooltip
+      .transition()
+      .duration(100)
+      .style("opacity", 1)
+    tooltip
+      .html("Mortality Range: " + d.x0 + "% - " + d.x1+ "%, No of countries:" +d.length)
+      .style("left", (d3.mouse(this)[0]+20) + "px")
+      .style("top", (d3.mouse(this)[1]) + "px")
+  }
+  var moveTooltip = function(d) {
+    tooltip
+    .style("left", (d3.mouse(this)[0]+20) + "px")
+    .style("top", (d3.mouse(this)[1]) + "px")
+  }
+  // A function that change this tooltip when the leaves a point: just need to set opacity to 0 again
+  var hideTooltip = function(d) {
+    tooltip
+      .transition()
+      .duration(100)
+      .style("opacity", 0)
+  }
+
+var colors = d3.scaleLinear()
+    .domain([0, 30])
+    .range(['yellow','red'])
+
+
+  // append the bar rectangles to the svg element
+  svg.selectAll("rect")
+      .data(bins)
+      .enter()
+      .append("rect")
+        .attr("x", 1)
+        .attr("transform", function(d) { return "translate(" + x(d.x0) + "," + y(d.length) + ")"; })
+        .attr("width", function(d) { return x(d.x1) - x(d.x0) -1 ; })
+        .attr("height", function(d) { return height - y(d.length); })
+        .style('fill', function(d,i) {
+        return colors(d.x0);})
+        // Show tooltip on hover
+        .on("mouseover", showTooltip )
+        .on("mousemove", moveTooltip )
+        .on("mouseleave", hideTooltip )
+
+});
+</script>
+
+<body>
+    <button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/sowjanya.github.io/';">
       Back
     </button>
-
-  <script src="main.js"></script>
+	
+    <button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/sowjanya.github.io/';">
+      Next
+    </button>
 </body>
-</html>
