--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ var colors = d3.scaleLinear()
 </script>
 
 <body>
-    <button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/sowjanya.github.io/';">
+    <button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/datavisualisation/';">
       Back
     </button>
 	
