--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ var colors = d3.scaleLinear()
       Back
     </button>
 	
-    <button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/sowjanya.github.io/';">
+    <button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/covidmortalityp3/';">
       Next
     </button>
 </body>
