--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@ var colors = d3.scaleLinear()
 </script>
 
 <body>
+<b> The chart above provides a overview of Mortality distribution across countries. 
+<br>Please note that very low numbers might mean that the country is still in early stage of spread. 	
+ </b>
+ <br>
     <button onclick="window.location.href='https://sowjanyabhupathiraju.github.io/datavisualisation/';">
       Back
     </button>
